--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-abac-adjudications-detailed.txt
-abac-adjudications-full-NEW.txt
-abac-adjudications-full.txt
-abac-adjudications.csv
+*.txt
+*.csv
 *.pyc
